# EPIC

./: Cargo.toml  README.md
src/: config.rs  content.rs  erik.rs  fetch.rs  file_ops.rs  lib.rs  main.rs  rrdp.rs  util.rs
src/erik/: asn1.rs  mod.rs  state.rs
src/fetch/: fetch.rs  mod.rs  retrieval.rs  rrdp.rs
src/to_be_cleaned/: config.rs  fetch.rs  mod.rs  rrdp.rs
test-resources/erik-types/: 05-index.der  05-partition.der  manifest.b64  manifest.mft
