[package]
name = "epic"
version = "0.1.0"
edition = "2024"
default-run = "epic"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.0"
chrono = "0.4.41"
fern = "0.7.1"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["native-tls", "blocking"] }
rpki = { version = "0.18.6", features = ["ca", "rrdp"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.141"
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["serde"] }
